# EdgeLite

./: .gitignore  CMakeLists.txt  LICENSE  Mailer.pro  README.md  Tracks.pro
BoardModel/: CMakeLists.txt
BoardModel/include/: Alert.h  AppKeyValue.h  Body.h  Command.h  Header.h  Query.h  Requests.h  Responses.h  Telemetry.h  Types.h
BoardModel/src/: main.c
DataModel/: CMakeLists.txt
DataModel/include/: AppKeyValue.h  Body.h  Command.h  DataModel.h  Query.h  Request.h  Response.h  Telemetry.h  Types.h
DataModel/src/: DataModel.c
DeviceManager/: CMakeLists.txt
GpioService/: main.c
MessageBus/: CMakeLists.txt  client.example
MessageBus/include/: .directory  MessageBroker.h  MessageBus.h
MessageBus/src/: MessageBroker.c  MessageBus.c  TestClient.c
MqttService/: CMakeLists.txt
MqttService/etc/: location.conf  service_thingsboard.conf
MqttService/src/: ThingsBoardService.c
NetworkManager/: CMakeLists.txt
SensorManager/: CMakeLists.txt
ServiceManager/: CMakeLists.txt
Simulator/: CMakeLists.txt
Simulator/include/: Simulator.h
Simulator/src/: Simulator.c  main.c
SmartAPI/: CMakeLists.txt
SmartAPI/etc/: IPCamBroker.ini
SmartAPI/sources/: Base64.cpp  Base64.h  CamDetect.cpp  CamDetect.h  DbLocal.cpp  DbLocal.h  Directory.h  Downloader.cpp  Downloader.h  FileRetriever.cpp  FileRetriever.h  HttpHandler.cpp  HttpHandler.h  HttpPacket.cpp  HttpPacket.h  IPCamBroker.cpp  IPCamBroker.h  IPCamStructs.h  Listener.cpp  Listener.h  Logger.cpp  Logger.h  NetworkHelper.cpp  NetworkHelper.h  Notifier.cpp  Notifier.h  OSDefinitions.h  PlaylistGen.cpp  PlaylistGen.h  Responder.cpp  Responder.h  Retriever.cpp  Retriever.h  SQLTemplates.cpp  SQLTemplates.h  SignalHandler.cpp  SignalHandler.h  StringEx.cpp  StringEx.h  Timestamp.cpp  (+4 more)
SmartDesk/: Master.lic  SmartDesk.pro
SmartDesk/config/: IPBuMv3.ini  IPCamDesktop.ini
SmartDesk/resources/: Resources.qrc
SmartDesk/sources/app/: AppSettings.h  IPCamDesktop.cpp  IPCamDesktop.h  main.cpp
SmartDesk/sources/entity/: Camera.h  Recording.h  Site.h
SmartDesk/sources/gui/: About.cpp  About.h  CamNameDialog.cpp  CamNameDialog.h  CameraView.cpp  CameraView.h  ConfigurationView.cpp  ConfigurationView.h  CustomWidgets.cpp  CustomWidgets.h  LicenseView.cpp  LicenseView.h  MainWindow.cpp  MainWindow.h  RecordingView.cpp  RecordingView.h  SideBar.cpp  SideBar.h  ThemeManager.cpp  ThemeManager.h  TimestampView.cpp  TimestampView.h
ThingsboardService/include/: ThingsBoardAdapter.h  ThingsBoardService.h
ThingsboardService/src/: ThingsBoardAdapter.c  ThingsBoardService.c  main.c
VirtualSensor/etc/: service_simulator.conf
VirtualSensor/include/: Simulator.h
Working/OnBoardSensor/: CMakeLists.txt  OnBoardSensor.ini  main.cpp
Working/OnBoardSensor/Cnfg/: OnBoardSensorCnfg.cpp  OnBoardSensorCnfg.h
Working/OnBoardSensor/accelerometer/: mma8451q.cpp  mma8451q.h
Working/OnBoardSensor/humidity/: si7020.cpp  si7020.h
Working/OnBoardSensor/i2c/: I2c_Interface.cpp  I2c_Interface.h
Working/OnBoardSensor/pressure/: mpl3150a2.cpp  mpl3150a2.h
resources/: Resources.qrc
sources/app/: AppSettings.h  MailClient.cpp  MailClient.h  Tracks.cpp  Tracks.h  mailClientMain.cpp  main.cpp
sources/data/: DataEntity.cpp  DataEntity.h  DataInterface.cpp  DataInterface.h
sources/gui/: About.cpp  About.h  AccountView.cpp  AccountView.h  AccountsConfigView.cpp  AccountsConfigView.h  AccountsWindow.cpp  AccountsWindow.h  AddressBookWindow.cpp  AddressBookWindow.h  Calender.cpp  Calender.h  ConfigurationView.cpp  ConfigurationView.h  ContactAddDialog.cpp  ContactAddDialog.h  ContactsView.cpp  ContactsView.h  CustomWidgets.cpp  CustomWidgets.h  Files.h  ImageLabel.cpp  ImageLabel.h  LiveStreamView.cpp  LiveStreamView.h  MailBoxView.cpp  MailBoxView.h  MailCompositionWindow.cpp  MailCompositionWindow.h  MailNewView.cpp  MailNewView.h  MailView.cpp  MailView.h  MainWindow.cpp  MainWindow.h  NetworkView.cpp  NetworkView.h  RecordingView.cpp  RecordingView.h  SettingsView.cpp  (+10 more)
sources/helpers/: ActionBuilder.cpp  ActionBuilder.h  ItemDelegates.cpp  ItemDelegates.h  ThemeManager.cpp  ThemeManager.h
sources/model/: AccountEntity.cpp  AccountEntity.h  ContactEntity.cpp  ContactEntity.h  Mail.cpp  Mail.h  MailBoxEntity.cpp  MailBoxEntity.h  SecurityTypes.h
sources/network/: DownloadManager.cpp  DownloadManager.h  ImapClient.cpp  ImapClient.h  ONVIFCamera.h  RecordingStructures.h  ServiceInterface.cpp  ServiceInterface.h  SmtpClient.cpp  SmtpClient.h  StorageInterface.cpp  StorageInterface.h
sources/storage/: MailStorage.cpp  MailStorage.h  StdFile.h
src/: edgelite.c
templates/: Device.GetCapabilities.xml  Device.GetDeviceInformation.xml  Device.GetServices.xml  Device.GetSystemDateAndTime.xml  Discovery.Probe.xml  Recording.GetRecordings.xml  Search.GetRecordingSearchResult.xml
