
cmake_minimum_required(VERSION 3.30)
set(CMAKE_C_STANDARD C23)
set(CMAKE_C_STANDARD_REQUIRED TRUE)

set(Project EdgeLite)
project(${Project})

set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(PROJECT_EDGELIB_SOURCE_DIR ./EdgeLib/EdgeLib/src)
set(PROJECT_EDGELIB_INCLUDE_DIR ./EdgeLib/EdgeLib/include)
set(PROJECT_EDGELIB_NETWORK_SOURCE_DIR ./EdgeLib/EdgeLibNetwork/src)
set(PROJECT_EDGELIB_NETWORK_INCLUDE_DIR ./EdgeLib/EdgeLibNetwork/include)
set(PROJECT_EDGELIB_IO_SOURCE_DIR ./EdgeLib/EdgeLibIO/src)
set(PROJECT_EDGELIB_IO_INCLUDE_DIR ./EdgeLib/EdgeLibIO/include)


include_directories(${PROJECT_EDGELIB_INCLUDE_DIR} ${PROJECT_EDGELIB_NETWORK_INCLUDE_DIR} ${PROJECT_EDGELIB_IO_INCLUDE_DIR} /usr/include/ /usr/local/include/)
link_libraries(rt pthread dl)
link_directories(/usr/local/lib/ /usr/lib/ /lib/ ./lib)

set(SOURCES
${SOURCES}
${PROJECT_EDGELIB_SOURCE_DIR}/Base64.c
${PROJECT_EDGELIB_SOURCE_DIR}/Buffer.c
${PROJECT_EDGELIB_SOURCE_DIR}/KeyValue.c
${PROJECT_EDGELIB_SOURCE_DIR}/List.c
${PROJECT_EDGELIB_SOURCE_DIR}/ListDoubleLinked.c
${PROJECT_EDGELIB_SOURCE_DIR}/Queue.c
${PROJECT_EDGELIB_SOURCE_DIR}/Stack.c
${PROJECT_EDGELIB_SOURCE_DIR}/StringEx.c
${PROJECT_EDGELIB_SOURCE_DIR}/File.c
${PROJECT_EDGELIB_SOURCE_DIR}/Directory.c
${PROJECT_EDGELIB_SOURCE_DIR}/Logger.c
${PROJECT_EDGELIB_SOURCE_DIR}/SignalHandler.c
${PROJECT_EDGELIB_SOURCE_DIR}/Environment.c
${PROJECT_EDGELIB_SOURCE_DIR}/Configuration.c
${PROJECT_EDGELIB_SOURCE_DIR}/DateTime.c
${PROJECT_EDGELIB_SOURCE_DIR}/Variant.c
${PROJECT_EDGELIB_SOURCE_DIR}/Dictionary.c
${PROJECT_EDGELIB_SOURCE_DIR}/EdgeLib.c
)

set(HEADERS
${HEADERS}
${PROJECT_EDGELIB_INCLUDE_DIR}/Defines.h
${PROJECT_EDGELIB_INCLUDE_DIR}/NetworkDefines.h
${PROJECT_EDGELIB_INCLUDE_DIR}/ProcessDefines.h
${PROJECT_EDGELIB_INCLUDE_DIR}/Base64.h
${PROJECT_EDGELIB_INCLUDE_DIR}/Buffer.h
${PROJECT_EDGELIB_INCLUDE_DIR}/KeyValue.h
${PROJECT_EDGELIB_INCLUDE_DIR}/List.h
${PROJECT_EDGELIB_INCLUDE_DIR}/ListDoubleLinked.h
${PROJECT_EDGELIB_INCLUDE_DIR}/Queue.h
${PROJECT_EDGELIB_INCLUDE_DIR}/Stack.h
${PROJECT_EDGELIB_INCLUDE_DIR}/StringEx.h
${PROJECT_EDGELIB_INCLUDE_DIR}/File.h
${PROJECT_EDGELIB_INCLUDE_DIR}/Directory.h
${PROJECT_EDGELIB_INCLUDE_DIR}/Logger.h
${PROJECT_EDGELIB_INCLUDE_DIR}/SignalHandler.h
${PROJECT_EDGELIB_INCLUDE_DIR}/Environment.h
${PROJECT_EDGELIB_INCLUDE_DIR}/Configuration.h
${PROJECT_EDGELIB_INCLUDE_DIR}/DateTime.h
${PROJECT_EDGELIB_INCLUDE_DIR}/Variant.h
${PROJECT_EDGELIB_INCLUDE_DIR}/Dictionary.h
${PROJECT_EDGELIB_INCLUDE_DIR}/EdgeLib.h
)

set(NETWORK_SOURCES
${NETWORK_SOURCES}
${PROJECT_EDGELIB_NETWORK_SOURCE_DIR}/Responder.c
#${PROJECT_EDGELIB_NETWORK_SOURCE_DIR}/ResponderSsl.c
${PROJECT_EDGELIB_NETWORK_SOURCE_DIR}/Mail.c
${PROJECT_EDGELIB_NETWORK_SOURCE_DIR}/Imap.c
${PROJECT_EDGELIB_NETWORK_SOURCE_DIR}/Smtp.c
)

set(NETWORK_HEADERS
${NETWORK_HEADERS}
${PROJECT_EDGELIB_NETWORK_INCLUDE_DIR}/Responder.h
#${PROJECT_EDGELIB_NETWORK_INCLUDE_DIR}/ResponderSsl.h
${PROJECT_EDGELIB_NETWORK_INCLUDE_DIR}/Mail.h
${PROJECT_EDGELIB_NETWORK_INCLUDE_DIR}/Mime.h
${PROJECT_EDGELIB_NETWORK_INCLUDE_DIR}/SecurityType.h
${PROJECT_EDGELIB_NETWORK_INCLUDE_DIR}/Imap.h
${PROJECT_EDGELIB_NETWORK_INCLUDE_DIR}/Smtp.h
)

set(IO_SOURCES
${IO_SOURCES}
${PROJECT_EDGELIB_IO_SOURCE_DIR}/HAL.c
${PROJECT_EDGELIB_IO_SOURCE_DIR}/I2C.c
${PROJECT_EDGELIB_IO_SOURCE_DIR}/SPI.c
${PROJECT_EDGELIB_IO_SOURCE_DIR}/UART.c
${PROJECT_EDGELIB_IO_SOURCE_DIR}/PWM.c
${PROJECT_EDGELIB_IO_SOURCE_DIR}/ADC.c
${PROJECT_EDGELIB_IO_SOURCE_DIR}/GPIO.c
${PROJECT_EDGELIB_IO_SOURCE_DIR}/CAN.c
)

set(IO_HEADERS
${IO_HEADERS}
${PROJECT_EDGELIB_IO_INCLUDE_DIR}/HAL.h
${PROJECT_EDGELIB_IO_INCLUDE_DIR}/HALTypes.h
${PROJECT_EDGELIB_IO_INCLUDE_DIR}/I2C.h
${PROJECT_EDGELIB_IO_INCLUDE_DIR}/SPI.h
${PROJECT_EDGELIB_IO_INCLUDE_DIR}/PWM.h
${PROJECT_EDGELIB_IO_INCLUDE_DIR}/ADC.h
${PROJECT_EDGELIB_IO_INCLUDE_DIR}/GPIO.h
${PROJECT_EDGELIB_IO_INCLUDE_DIR}/CAN.h
)

### TEST APPLICATION
add_executable(${Project}.bin ${SOURCES} ${HEADERS} ${NETWORK_SOURCES} ${NETWORK_HEADERS} ${IO_SOURCES} ${IO_HEADERS} ./src/edgelite.c)
### TEST APPLICATION




